--- a/Web321/nbproject/project.properties
+++ b/Web321/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.sqljdbc42.jar=C:\\Users\\Tuan Anh\\Documents\\JavaWeb\\FinalQ2_HE130104\\jdbc\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +42,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqljdbc42.jar}:\
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
