--- a/Web321/nbproject/project.properties
+++ b/Web321/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.sqljdbc4.jar=C:\\Users\\lpxed\\Downloads\\Create sample JDBC project\\4-create sample JDBC project\\sqljdbc4.jar
 file.reference.sqljdbc42.jar=C:\\Users\\Tuan Anh\\Documents\\JavaWeb\\FinalQ2_HE130104\\jdbc\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,7 +45,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
