add create new post

--- a/Web321/web/WEB-INF/web.xml
+++ b/Web321/web/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <servlet-name>ProfileServlet</servlet-name>
         <servlet-class>controller.ProfileServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>NewPostController</servlet-name>
+        <servlet-class>controller.NewPostController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -63,6 +67,10 @@
     <servlet-mapping>
         <servlet-name>ProfileServlet</servlet-name>
         <url-pattern>/profile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewPostController</servlet-name>
+        <url-pattern>/newPost</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
