--- a/Web321/web/WEB-INF/web.xml
+++ b/Web321/web/WEB-INF/web.xml
@@ -42,13 +42,12 @@
         <servlet-class>controller.ProfileServlet</servlet-class>
     </servlet>
     <servlet>
-<<<<<<< HEAD
         <servlet-name>NewPostController</servlet-name>
         <servlet-class>controller.NewPostController</servlet-class>
-=======
+    </servlet>
+    <servlet>
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>controller.LogoutServlet</servlet-class>
->>>>>>> cbd75aa0f4891475b1ae4431daf097aa27887740
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
@@ -75,13 +74,14 @@
         <url-pattern>/profile</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-<<<<<<< HEAD
+
         <servlet-name>NewPostController</servlet-name>
         <url-pattern>/newPost</url-pattern>
-=======
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/logout</url-pattern>
->>>>>>> cbd75aa0f4891475b1ae4431daf097aa27887740
+
     </servlet-mapping>
     <session-config>
         <session-timeout>
