--- a/Web321/nbproject/private/private.properties
+++ b/Web321/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\lpxed\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-180139514.properties
-file.reference.sqljdbc4.jar=C:\\Users\\Tuan Anh\\Documents\\JavaWeb\\FinalQ2_HE130104\\jdbc\\sqljdbc42.jar
-file.reference.sqljdbc42.jar=C:\\Users\\Tuan Anh\\Documents\\JavaWeb\\FinalQ2_HE130104\\jdbc\\sqljdbc42.jar
+deploy.ant.properties.file=C:\\Users\\Tuan Anh\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3962758333.properties
+file.reference.sqljdbc4.jar=C:\\Users\\Tuan Anh\\Documents\\JavaWeb\\sqljdbc4.jar
+file.reference.sqljdbc42.jar=C:\\Users\\Tuan Anh\\Documents\\JavaWeb\\2_FinalQ2_HE130104_exam1\\jdbc\\sqljdbc42.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/lpxed/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.domain=C:/Users/Tuan Anh/AppData/Roaming/NetBeans/8.1/config/GF_4.1.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
 j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=Chrome
-user.properties.file=C:\\Users\\lpxed\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Tuan Anh\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
